--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -173,7 +173,7 @@
         android:layout_above="@id/layout_bottom">
 
         <TextView
-            android:id="@+id/duration_view"
+            android:id="@+id/duration_play"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1:28"
