--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -23,6 +23,7 @@
         android:src="@drawable/baseline_chevron_left"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
+        android:layout_marginLeft="5dp"
         />
     
     <TextView
@@ -45,6 +46,7 @@
             android:src="@drawable/baseline_menu"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
+            android:layout_marginRight="15dp"
             />
     </RelativeLayout>
 
@@ -83,6 +85,7 @@
         android:ellipsize="end"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
+        android:layout_marginTop="5dp"
         />
 
     <TextView
@@ -98,6 +101,7 @@
         android:ellipsize="end"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
+        android:layout_marginTop="5dp"
         />
 
     <RelativeLayout
@@ -111,8 +115,8 @@
 
         <ImageView
             android:id="@+id/shuffle"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/baseline_shuffle_off"
             android:layout_centerVertical="true"
             android:layout_alignParentStart="true"
@@ -121,8 +125,8 @@
 
         <ImageView
             android:id="@+id/previous"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/baseline_skip_previous"
             android:layout_centerVertical="true"
             android:layout_toStartOf="@id/play_pause"
@@ -144,8 +148,8 @@
 
         <ImageView
             android:id="@+id/next"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/baseline_skip_next"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@id/play_pause"
@@ -154,8 +158,8 @@
 
         <ImageView
             android:id="@+id/repeat"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/baseline_repeat_off"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
