--- a/app/src/main/res/layout/music_items.xml
+++ b/app/src/main/res/layout/music_items.xml
@@ -22,6 +22,16 @@
         android:layout_toEndOf="@id/music_img"
         android:layout_marginStart="10dp"
         android:layout_centerVertical="true"
+        android:layout_toStartOf="@id/menuMore"
         android:textColor="#FFFFFF"
+        />
+
+    <ImageView
+        android:id="@+id/menuMore"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/baseline_more"
+        android:padding="10dp"
+        android:layout_alignParentEnd="true"
         />
 </RelativeLayout>
