--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/main_bg"
     android:orientation="vertical"
     tools:context=".PlayerActivity">
-    
+
     <RelativeLayout
         android:id="@+id/layout_top_btn"
         android:layout_width="match_parent"
@@ -25,7 +25,7 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="5dp"
         />
-    
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,7 +35,7 @@
         android:layout_toEndOf="@id/back_btn"
         android:layout_toStartOf="@id/menu_btn"
         android:gravity="center_horizontal"
-        android:textSize="18sp"
+        android:textSize="14sp"
         android:textStyle="bold"
         />
 
@@ -60,48 +60,59 @@
             android:id="@+id/cover_art"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
             />
         
         <ImageView
             android:id="@+id/imageViewGredient"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="200dp"
             android:layout_alignParentBottom="true"
             />
     </RelativeLayout>
 
     <TextView
         android:id="@+id/song_name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Song name"
         android:layout_below="@id/card"
         android:textColor="@color/white"
         android:gravity="center_horizontal"
-        android:textSize="22sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         android:singleLine="true"
         android:ellipsize="end"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="18dp"
         android:layout_marginEnd="32dp"
         android:layout_marginTop="5dp"
         />
 
+    <ImageButton
+        android:id="@+id/btn_favourite_player"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_alignBottom="@+id/card"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="17dp"
+        android:layout_marginBottom="-35dp"
+        android:background="@null"
+        android:src="@drawable/baseline_no_favorite_border"
+        app:tint="#fff" />
+
     <TextView
         android:id="@+id/song_artist"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Artist name"
         android:layout_below="@id/song_name"
         android:textColor="@color/white"
         android:gravity="center_horizontal"
-        android:textSize="18sp"
+        android:textSize="13sp"
         android:singleLine="true"
         android:ellipsize="end"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="18dp"
         android:layout_marginEnd="40dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="7dp"
         />
 
     <RelativeLayout
@@ -183,7 +194,7 @@
             android:layout_height="wrap_content"
             android:text="1:28"
             android:textColor="@color/white"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="15dp"
             android:layout_alignParentStart="true"
             />
 
@@ -193,7 +204,7 @@
             android:layout_height="wrap_content"
             android:text="4:28"
             android:textColor="@color/white"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="15dp"
             android:layout_alignParentEnd="true"
             />
         
