--- a/app/src/main/res/layout/activity_database.xml
+++ b/app/src/main/res/layout/activity_database.xml
@@ -29,4 +29,34 @@
         android:text="Save"
         android:onClick="saveNote"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Load"
+        android:onClick="loadNote"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Update description"
+        android:onClick="updateDescription"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Delete description"
+        android:onClick="deleteDescription"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Delete note"
+        android:onClick="deleteNote"/>
+
+    <TextView
+        android:id="@+id/text_view_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"/>
+
 </LinearLayout>
