--- a/app/src/main/res/layout/fragment_now_playing_bottom.xml
+++ b/app/src/main/res/layout/fragment_now_playing_bottom.xml
@@ -5,8 +5,7 @@
     android:layout_height="wrap_content"
     android:id="@+id/fragment_bottom"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".NowPlayingFragmentBottom"
-    android:clickable="true">
+    tools:context=".NowPlayingFragmentBottom">
 
     <RelativeLayout
         android:id="@+id/card_bottom_player"
@@ -68,6 +67,5 @@
             android:layout_toStartOf="@id/play_pause_miniPlayer"/>
 
     </RelativeLayout>
-
 
 </FrameLayout>
