--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -76,7 +76,7 @@
         android:layout_marginTop="16dp"
         android:text="Forgot Password ?"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/Password"
         app:layout_constraintTop_toBottomOf="@+id/Password" />
@@ -115,8 +115,8 @@
             android:id="@+id/textViewSignUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="17sp"
-            android:text="Signup"
+            android:textSize="15sp"
+            android:text="Register"
             android:textStyle="bold"
             android:textColor="@color/white"
             android:layout_marginLeft="5dp"/>
