--- a/app/src/main/res/layout/activity_account_info.xml
+++ b/app/src/main/res/layout/activity_account_info.xml
@@ -6,10 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
+    android:background="@drawable/info_bg"
     tools:context=".LoginReg.AccountInfoActivity">
 
     <ImageButton
-        android:id="@+id/back_button"
+        android:id="@+id/back_button_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -30,7 +31,8 @@
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/back_button" />
+        app:layout_constraintTop_toBottomOf="@id/back_button_info"
+        android:textColor="#5E4C52"/>
 
     <!-- Image User -->
     <ImageView
@@ -105,5 +107,41 @@
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@id/text_username_label"
         app:layout_constraintTop_toBottomOf="@id/text_email_label" />
+
+    <Button
+        android:id="@+id/update_account_btn_info"
+        android:layout_width="230dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Update Account"
+        android:background="@drawable/account_info_btn"
+        app:layout_constraintTop_toBottomOf="@id/text_username_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5" />
+
+    <Button
+        android:id="@+id/user_list"
+        android:layout_width="230dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="User List"
+        android:background="@drawable/account_info_btn"
+        app:layout_constraintTop_toBottomOf="@id/update_account_btn_info"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5" />
+
+    <Button
+        android:id="@+id/logout_button_info"
+        android:layout_width="230dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Log Out"
+        android:background="@drawable/account_info_btn"
+        app:layout_constraintTop_toBottomOf="@id/user_list"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
