--- a/app/src/main/res/menu/navigation_bar_tabs.xml
+++ b/app/src/main/res/menu/navigation_bar_tabs.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="tab_home"
+        android:id="@+id/tab_home"
         android:icon="@drawable/baseline_home_main"
         android:title="Home"/>
 
     <item
-        android:id="tab_library"
+        android:id="@+id/tab_library"
         android:icon="@drawable/baseline_library_music_main"
         android:title="Library"/>
 
