--- a/app/src/main/res/layout/activity_account_info.xml
+++ b/app/src/main/res/layout/activity_account_info.xml
@@ -56,7 +56,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/image_user" />
 
-    <EditText
+    <TextView
         android:id="@+id/info_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -77,7 +77,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/info_name" />
 
-    <EditText
+    <TextView
         android:id="@+id/info_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -109,29 +109,16 @@
         app:layout_constraintTop_toBottomOf="@id/text_email_label" />
 
     <Button
-        android:id="@+id/update_account_btn_info"
-        android:layout_width="230dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="Update Account"
-        android:background="@drawable/account_info_btn"
-        app:layout_constraintTop_toBottomOf="@id/text_username_label"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5" />
-
-    <Button
-        android:id="@+id/user_list_info"
+        android:id="@+id/user_add_song"
         android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="User List"
+        android:text="Add Song"
         android:background="@drawable/account_info_btn"
         app:layout_constraintTop_toBottomOf="@id/logout_button_info"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        android:visibility="invisible"/>
+        app:layout_constraintHorizontal_bias="0.5" />
 
     <Button
         android:id="@+id/logout_button_info"
@@ -140,7 +127,7 @@
         android:layout_marginTop="20dp"
         android:text="Log Out"
         android:background="@drawable/account_info_btn"
-        app:layout_constraintTop_toBottomOf="@id/update_account_btn_info"
+        app:layout_constraintTop_toBottomOf="@id/info_username"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"/>
