--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -11,7 +11,7 @@
         app:headerLayout="@layout/navigation_drawer_layout"
         app:menu="@menu/main_menu"
         android:id="@+id/nav_view"
-        android:layout_gravity="start"/>
+        android:layout_gravity="end"/>
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
