--- a/app/src/main/res/layout/navigation_drawer_layout.xml
+++ b/app/src/main/res/layout/navigation_drawer_layout.xml
@@ -9,19 +9,21 @@
     android:gravity="bottom">
 
     <TextView
+        android:id="@+id/drawer_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Your name"
         android:textColor="#fff"
-        android:textSize="30sp"
-        android:textStyle="bold"/>
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Music App"
         android:textStyle="bold"
-        android:textSize="18sp"
-        android:textColor="#fff"/>
+        android:textSize="14sp"
+        android:textColor="#fff"
+        android:layout_marginTop="10dp"/>
 
 </LinearLayout>
