--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,6 +5,9 @@
         <item android:id="@+id/home"
             android:icon="@drawable/baseline_home_dark"
             android:title="Home"/>
+        <item android:id="@+id/logout"
+            android:icon="@drawable/baseline_logout"
+            android:title="Log out"/>
     </group>
 
     <item android:title="Profile">
