--- a/app/src/main/res/layout/activity_account_info.xml
+++ b/app/src/main/res/layout/activity_account_info.xml
@@ -118,7 +118,8 @@
         app:layout_constraintTop_toBottomOf="@id/info_username"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5" />
+        app:layout_constraintHorizontal_bias="0.5"
+        android:visibility="gone"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
