--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,11 +38,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true">
 
-            <fragment
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:name="com.example.myapplication.NowPlayingFragmentBottom"
-                tools:layout="@layout/fragment_now_playing_bottom"/>
+<!--            <fragment-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:name="com.example.myapplication.NowPlayingFragmentBottom"-->
+<!--                tools:layout="@layout/fragment_now_playing_bottom"/>-->
         </FrameLayout>
 
     </RelativeLayout>
