--- a/app/src/main/res/layout/navigation_drawer_layout.xml
+++ b/app/src/main/res/layout/navigation_drawer_layout.xml
@@ -5,7 +5,7 @@
     android:layout_height="200dp"
     android:padding="20dp"
     android:orientation="vertical"
-    android:background="#C8000000"
+    android:background="@drawable/drawer_bg"
     android:gravity="bottom">
 
     <TextView
@@ -20,7 +20,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Music App"
+        android:text="@string/app_name"
         android:textStyle="bold"
         android:textSize="14sp"
         android:textColor="#fff"
